# gba-rs

./: Cargo.toml  README.md  a.txt
res/: A.txt
src/: main.rs
src/cpu/: addrbus.rs  arm.rs  arm_op_map.rs  arm_op_select.rs  arm_op_table.rs  cpu.rs  mem.rs  mod.rs  opcode_map.rs  reg.rs  selector.rs  thumb.rs  thumb_op_map.rs
src/cpu/arm_op/: branch.rs  branch_exchange.rs  cdp.rs  cdt.rs  data_process.rs  instruct_execute.rs  mod.rs  multiply.rs  multiply_long.rs  psr_transfer.rs  singledata_transfer.rs  software_interrupt.rs  swp.rs  undefined.rs
src/gba/: bios.rs  mod.rs
src/gba/hardware/: mem.rs
src/gba/mem/: mem.rs  mod.rs
src/util/: mod.rs  util.rs
