[package]
name = "gba-rust"
version = "0.1.0"
authors = ["jelipo <me@jelipo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.1"
fantasy-util = "0.1.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'