[package]
name = "gba-rs"
version = "0.1.0"
authors = ["jelipo <me@jelipo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.25.0"
fantasy-util = "0.1.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'